{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 333,
  "lineage": "956cfc1d-e636-d3e4-8b69-8c8959522247",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Public_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:loadbalancer/app/SAP-Dev-loadbalancer/541b8ba343724d31",
            "arn_suffix": "app/SAP-Dev-loadbalancer/541b8ba343724d31",
            "desync_mitigation_mode": "defensive",
            "dns_name": "SAP-Dev-loadbalancer-774770553.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:loadbalancer/app/SAP-Dev-loadbalancer/541b8ba343724d31",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "SAP-Dev-loadbalancer",
            "security_groups": [
              "sg-06fb1d390ee41cfa4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cf07f0a3bbdcc663"
              },
              {
                "subnet_id": "subnet-0e7100302e7b7a40a"
              }
            ],
            "subnets": [
              "subnet-0cf07f0a3bbdcc663",
              "subnet-0e7100302e7b7a40a"
            ],
            "tags": {
              "Name": "SAP-Dev-loadbalancer",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-loadbalancer",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-050be2888f46f92e2",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/5ecc4b53032dec46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/5ecc4b53032dec46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:loadbalancer/app/SAP-Dev-loadbalancer/541b8ba343724d31",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.alb.aws_lb_target_group.main",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "data.aws_ami.amz_linux2",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861",
            "certificate_arn": "arn:aws:acm:eu-west-1:174228772591:certificate/9773a7a9-5bd3-4f95-9b9b-33b643499990",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed Static message - for Root Context",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:loadbalancer/app/SAP-Dev-loadbalancer/541b8ba343724d31",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_vpc.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.vpc.aws_subnet.private",
            "module.rds_sg.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "data.aws_route53_zone.mydomain",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_route53_record.validation",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_subnet.database"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/dba9e950b0270b13",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/dba9e950b0270b13",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.vpc.aws_vpc.this",
            "module.acm.aws_acm_certificate.this",
            "module.alb.aws_lb_target_group.main",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_route53_record.validation",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.random_password.master_password",
            "data.aws_ami.amz_linux2",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.alb.aws_lb_listener.frontend_https",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.vpc.aws_subnet.public",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.acm.aws_acm_certificate_validation.this",
            "module.vpc.aws_subnet.database",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/21dc634f4d29bd66",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/21dc634f4d29bd66",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/7bbdc348bf9efdb1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener-rule/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861/7bbdc348bf9efdb1",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:listener/app/SAP-Dev-loadbalancer/541b8ba343724d31/034b161a5b648861",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
            "arn_suffix": "targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-2022050609203440660000000a",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "target_type": "instance",
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.vpc.aws_subnet.private",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.random_password.master_password"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
            "arn_suffix": "targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app2/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app2-2022050609203442900000000b",
            "name_prefix": "app2-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app2-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "app2-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "target_type": "instance",
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.vpc.aws_subnet.database",
            "data.aws_ami.amz_linux2",
            "module.private_security-group.aws_security_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.rds_sg.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.private",
            "module.alb.aws_lb.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
            "arn_suffix": "targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app3-20220506092034404800000009",
            "name_prefix": "app3-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 84600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app3-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "app3-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "target_type": "instance",
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.vpc.aws_subnet.private",
            "data.aws_ami.amz_linux2",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_app1_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312-20220506092043586900000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
            "target_id": "i-0b26c22bf06c72c72"
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "0.my_app1_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312-2022050609204352190000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app1-2022050609203440660000000a/3565c082c1e8c312",
            "target_id": "i-02652090432affaf9"
          },
          "dependencies": [
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "data.aws_ami.amz_linux2",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this"
          ]
        },
        {
          "index_key": "1.my_app2_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce-20220506092043528200000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
            "target_id": "i-08217aaeac501962d"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.random_password.master_password",
            "data.aws_ami.amz_linux2",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": "1.my_app2_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce-2022050609204351470000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app2-2022050609203442900000000b/5fb393ab5a23c2ce",
            "target_id": "i-02cbcdc6744b3bab9"
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.alb.aws_lb.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "2.my_app3_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7-2022050609204349630000000c",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
            "target_id": "i-0fcf93041920d1478"
          },
          "dependencies": [
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "data.aws_ami.amz_linux2",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.alb.aws_lb_target_group.main",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.random_password.master_password",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.vpc.aws_vpc.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.vpc.aws_subnet.public",
            "module.alb.aws_lb.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "2.my_app3_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7-2022050609204349690000000d",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:174228772591:targetgroup/app3-20220506092034404800000009/116b1fb5c81778e7",
            "target_id": "i-017fdddf6fb02860b"
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.alb.aws_lb_target_group.main",
            "module.ec2-instance_private_app1.aws_instance.this",
            "module.ec2-instance_private_app2.aws_instance.this",
            "module.ec2-instance_private_app3.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-0ab6ab0ae8da47560",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab6ab0ae8da47560",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d4221c1a261c2b5",
            "private_dns": "ip-10-230-0-11.eu-west-1.compute.internal",
            "private_ip": "10.230.0.11",
            "public_dns": "ec2-3-250-158-186.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.158.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cce3ce1540ccee2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf07f0a3bbdcc663",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host"
            },
            "vpc_security_group_ids": [
              "sg-09c29b27469b17837"
            ]
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance_private_app1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-0b26c22bf06c72c72",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b26c22bf06c72c72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7a5fbcc0b589a53",
            "private_dns": "ip-10-230-0-30.eu-west-1.compute.internal",
            "private_ip": "10.230.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7bf199cf115f6a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ec507c0ddb737e2",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-1"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-02652090432affaf9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02652090432affaf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0056433afd4cf5662",
            "private_dns": "ip-10-230-0-58.eu-west-1.compute.internal",
            "private_ip": "10.230.0.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052bc6880ca86f092",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb16ef96223e5de2",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App1-2"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amz_linux2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance_private_app2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-08217aaeac501962d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08217aaeac501962d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e9aa391636545fe",
            "private_dns": "ip-10-230-0-22.eu-west-1.compute.internal",
            "private_ip": "10.230.0.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0946a08b78ea44d2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ec507c0ddb737e2",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-1"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amz_linux2"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-02cbcdc6744b3bab9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cbcdc6744b3bab9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a07a75adc299e3ec",
            "private_dns": "ip-10-230-0-53.eu-west-1.compute.internal",
            "private_ip": "10.230.0.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0213a5a70a1d3f20d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb16ef96223e5de2",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host_App2-2"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amz_linux2",
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance_private_app3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-0fcf93041920d1478",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcf93041920d1478",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca1cd4645ef628cd",
            "private_dns": "ip-10-230-0-20.eu-west-1.compute.internal",
            "private_ip": "10.230.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017beeacb4f74de96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ec507c0ddb737e2",
            "tags": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-1",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-1"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_subnet.database",
            "module.private_security-group.aws_security_group.this",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "data.aws_ami.amz_linux2",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05489a3f80e532309",
            "arn": "arn:aws:ec2:eu-west-1:174228772591:instance/i-017fdddf6fb02860b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017fdddf6fb02860b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e14a285bf1bb39c0",
            "private_dns": "ip-10-230-0-60.eu-west-1.compute.internal",
            "private_ip": "10.230.0.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0065e9ba21d9d40d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb16ef96223e5de2",
            "tags": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-2",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_Private_Host_App3-2"
            },
            "vpc_security_group_ids": [
              "sg-06ddb48aff43b9318"
            ]
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.private_security-group.aws_security_group.this",
            "module.rds_sg.aws_security_group.this",
            "module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "data.aws_ami.amz_linux2",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.vpc.aws_subnet.private",
            "module.rdsdb.module.db_instance.aws_db_instance.this_mssql",
            "module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.rdsdb.random_password.master_password"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:security-group/sg-06fb1d390ee41cfa4",
            "description": "this loadbalancer sg allows the http traffic on port 80 and also on port 81",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fb1d390ee41cfa4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic from port 81",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Loadbalancer-SG-20220506085724980600000004",
            "name_prefix": "Loadbalancer-SG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1555150422",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06fb1d390ee41cfa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.loadbalancer_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-452286229",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fb1d390ee41cfa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1687771716",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fb1d390ee41cfa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http traffic from port 81",
            "from_port": 81,
            "id": "sgrule-4116457843",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fb1d390ee41cfa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:security-group/sg-06ddb48aff43b9318",
            "description": "Allow ssh on port 22 and hhtp traffic within the network of CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ddb48aff43b9318",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SAP-Dev-PublicSG-20220506085724997800000007",
            "name_prefix": "SAP-Dev-PublicSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1094511462",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ddb48aff43b9318",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2571920014",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ddb48aff43b9318",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-887752637",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ddb48aff43b9318",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-465400086",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ddb48aff43b9318",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:security-group/sg-09c29b27469b17837",
            "description": "Allow ssh on port 22 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c29b27469b17837",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SAP-Dev-PublicSG-20220506085724992300000005",
            "name_prefix": "SAP-Dev-PublicSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-139704289",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09c29b27469b17837",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-997281908",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c29b27469b17837",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:security-group/sg-03e2fb1b8143b2866",
            "description": "this rds sg allows the database traffic within the vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e2fb1b8143b2866",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "Allow http traffic from port 3306 within vpc",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS-SG-20220506085724993600000006",
            "name_prefix": "RDS-SG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "RDS-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2241787740",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03e2fb1b8143b2866",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "Allow http traffic from port 3306 within vpc",
            "from_port": 3306,
            "id": "sgrule-2237491282",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03e2fb1b8143b2866",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f442832dfe84ed8",
            "association_id": "eipassoc-0421b27a29facbd32",
            "domain": "vpc",
            "id": "eipalloc-08f442832dfe84ed8",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-04d19c6e5dad3954d",
            "private_dns": "ip-10-230-0-4.eu-west-1.compute.internal",
            "private_ip": "10.230.0.4",
            "public_dns": "ec2-52-208-188-234.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.188.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-eu-west-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-eu-west-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:internet-gateway/igw-0323251198add7709",
            "id": "igw-0323251198add7709",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f442832dfe84ed8",
            "connectivity_type": "public",
            "id": "nat-080984e53bb5d50eb",
            "network_interface_id": "eni-04d19c6e5dad3954d",
            "private_ip": "10.230.0.4",
            "public_ip": "52.208.188.234",
            "subnet_id": "subnet-0cf07f0a3bbdcc663",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-eu-west-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-eu-west-1a",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb65b5b7ff4ac4bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-080984e53bb5d50eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb65b5b7ff4ac4bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0323251198add7709",
            "id": "r-rtb-0fb72db05c40673d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb72db05c40673d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:route-table/rtb-03aa6bb360a91baa3",
            "id": "rtb-03aa6bb360a91baa3",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:route-table/rtb-0cb65b5b7ff4ac4bd",
            "id": "rtb-0cb65b5b7ff4ac4bd",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-080984e53bb5d50eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:route-table/rtb-0fb72db05c40673d6",
            "id": "rtb-0fb72db05c40673d6",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0323251198add7709",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dae5be40dd90022e",
            "route_table_id": "rtb-03aa6bb360a91baa3",
            "subnet_id": "subnet-0adaf907b31742eff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019269ea5f87c91a0",
            "route_table_id": "rtb-03aa6bb360a91baa3",
            "subnet_id": "subnet-0982e93d1e7b25fbc"
          },
          "dependencies": [
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb6b50e75c9dcbec",
            "route_table_id": "rtb-0cb65b5b7ff4ac4bd",
            "subnet_id": "subnet-04ec507c0ddb737e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c5e0dcdc7173a03",
            "route_table_id": "rtb-0cb65b5b7ff4ac4bd",
            "subnet_id": "subnet-0fb16ef96223e5de2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d811fdd8bb280750",
            "route_table_id": "rtb-0fb72db05c40673d6",
            "subnet_id": "subnet-0cf07f0a3bbdcc663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e28f8bf023b9ee85",
            "route_table_id": "rtb-0fb72db05c40673d6",
            "subnet_id": "subnet-0e7100302e7b7a40a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-0adaf907b31742eff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.230.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adaf907b31742eff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db-eu-west-1a",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db-eu-west-1a",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-0982e93d1e7b25fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.230.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0982e93d1e7b25fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db-eu-west-1b",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db-eu-west-1b",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-04ec507c0ddb737e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec507c0ddb737e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-eu-west-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-0fb16ef96223e5de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb16ef96223e5de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-eu-west-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-0cf07f0a3bbdcc663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf07f0a3bbdcc663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-eu-west-1a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-eu-west-1a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:subnet/subnet-0e7100302e7b7a40a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7100302e7b7a40a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-eu-west-1b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-eu-west-1b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-050be2888f46f92e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:174228772591:vpc/vpc-050be2888f46f92e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-0e92f415450d878b8",
            "default_route_table_id": "rtb-0adcd42be36e1a370",
            "default_security_group_id": "sg-08625233c3b4c4eb1",
            "dhcp_options_id": "dopt-02f13b1e50ee0410d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-050be2888f46f92e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adcd42be36e1a370",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}